// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion - Snapshot should render a proper expanded state 1`] = `
<View
  style={{}}
  testID="accordion"
>
  <TouchableOpacity
    activeOpacity={0.5}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
      }
    }
    testID="accordion-header"
  >
    <Text
      style={
        {
          "color": "#0376C9",
          "fontFamily": "Euclid Circular B",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
      testID="accordion-header-title"
    >
      Sample Accordion Header Title
    </Text>
    <View
      style={
        [
          {
            "marginLeft": 4,
          },
          {
            "transform": [
              {
                "rotate": "180deg",
              },
            ],
          },
        ]
      }
      testID="accordion-header-arrow-icon-animation"
    >
      <View />
    </View>
  </TouchableOpacity>
  <View
    transition={
      <Transition.Together>
        <Transition.In
          durationMs={150}
          type="fade"
        />
        <Transition.Out
          durationMs={150}
          type="fade"
        />
      </Transition.Together>
    }
  >
    <View
      testID="accordion-content"
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`Accordion - Snapshot should render default settings correctly 1`] = `
<View
  style={{}}
  testID="accordion"
>
  <TouchableOpacity
    activeOpacity={0.5}
    onPress={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "height": 24,
        "justifyContent": "center",
      }
    }
    testID="accordion-header"
  >
    <Text
      style={
        {
          "color": "#0376C9",
          "fontFamily": "Euclid Circular B",
          "fontSize": 14,
          "fontWeight": "400",
          "letterSpacing": 0,
          "lineHeight": 22,
        }
      }
      testID="accordion-header-title"
    >
      Sample Accordion Header Title
    </Text>
    <View
      style={
        [
          {
            "marginLeft": 4,
          },
          {
            "transform": [
              {
                "rotate": "0deg",
              },
            ],
          },
        ]
      }
      testID="accordion-header-arrow-icon-animation"
    >
      <View />
    </View>
  </TouchableOpacity>
  <View
    transition={
      <Transition.Together>
        <Transition.In
          durationMs={150}
          type="fade"
        />
        <Transition.Out
          durationMs={150}
          type="fade"
        />
      </Transition.Together>
    }
  />
</View>
`;
